// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`receiptItems.remove > functionality > foreign receipt 1`] = `
{
  "deleted": {
    "receiptItems": {
      "id:b4376571-bb19-4959-82ed-efa4c22bc8b7": undefined,
    },
  },
}
`;

exports[`receiptItems.remove > functionality > own receipt 1`] = `
{
  "deleted": {
    "receiptItems": {
      "id:2cf1208d-e308-4053-8481-3f626290b2c0": undefined,
    },
  },
}
`;
